Creación doc Postman, y Swagger-UI e implementación de correcciones del AdminDash y creación pantallas proyectos para usuarios

--- a/src-frontend/src/app/admin-dash/admin-dash-mod-proyects/admin-dash-mod-proyects.component.css
+++ b/src-frontend/src/app/admin-dash/admin-dash-mod-proyects/admin-dash-mod-proyects.component.css
@@ -265,6 +265,7 @@
 
   .agregar {
     transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out;
+    border-radius: 10px;
   }
 
   .notification {
@@ -284,4 +285,7 @@
     margin-right: 10px;
   }
   
+  .espaciado{
+    margin-bottom: 200px;
+  }
   
