--- a/src-frontend/src/app/home/home.component.html
+++ b/src-frontend/src/app/home/home.component.html
@@ -1,12 +1,9 @@
 <div class="header">
 
-    <!--Content before waves-->
     <div class="inner-header flex">
-        <!--Just the logo.. Don't mind this-->
-
-        <h1>Bienvenido a AR Task Manager</h1>
+        <h1>Bienvenido a Blue Bull - Task Manager</h1>
     </div>
-
+    
     <div>
         <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
             viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
