--- a/src-frontend/src/app/admin-dash/admin-dash-mod-tarea/admin-dash-mod-tarea.component.html
+++ b/src-frontend/src/app/admin-dash/admin-dash-mod-tarea/admin-dash-mod-tarea.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container mt-5 espaciado">
   <div class="back">
     <button type="button" class="btn btn-primary" (click)="irAtras()">Volver</button>
   </div>
