--- a/src-frontend/src/app/app.component.html
+++ b/src-frontend/src/app/app.component.html
@@ -1,4 +1,8 @@
-
-<app-header></app-header>
-<router-outlet></router-outlet>
-
+<div class="content-wrapper">
+    <app-header></app-header>
+    <main>
+      <router-outlet></router-outlet>
+    </main>
+  </div>
+  <app-footer></app-footer>
+  
