--- a/src-frontend/src/app/components/user-sidebar/user-sidebar.component.html
+++ b/src-frontend/src/app/components/user-sidebar/user-sidebar.component.html
@@ -16,10 +16,12 @@
                     Notas
                   </mat-panel-title>
                 </mat-expansion-panel-header>
-                <p *ngFor="let note of notes">
+                <p [routerLink]="['/notas']" routerLinkActive="active">Todas las notas</p>
+                <p *ngFor="let note of notes" [routerLink]="['/notas', note.id]"
+                routerLinkActive="active">
                     {{note.titulo}}
                 </p>
-                <p>Nueva Nota +</p>
+                <p [routerLink]="['/crearNota']" routerLinkActive="active">Nueva Nota +</p>
               </mat-expansion-panel>
             <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
                 <mat-expansion-panel-header>
@@ -27,10 +29,12 @@
                         Proyectos
                     </mat-panel-title>
                 </mat-expansion-panel-header>
-                <p *ngFor="let proyecto of proyectos">
+                <p [routerLink]="['/proyectos']" routerLinkActive="active">Todas los proyectos</p>
+                <p *ngFor="let proyecto of proyectos" [routerLink]="['/proyectos', proyecto.id]"
+                routerLinkActive="active">
                     {{proyecto.nombre}}
                 </p>
-                <p>Nueva Nota +</p>
+                <p  [routerLink]="['/crearProyecto']" routerLinkActive="active">Nuevo Proyecto +</p>
             </mat-expansion-panel>
         </mat-accordion>
     </div>
