--- a/src-frontend/src/app/home/home.component.css
+++ b/src-frontend/src/app/home/home.component.css
@@ -1,5 +1,3 @@
-@import url(//fonts.googleapis.com/css?family=Lato:300:400);
-
 body {
   margin:0;
 }
@@ -10,6 +8,7 @@ h1 {
   letter-spacing: 2px;
   font-size:48px;
 }
+
 p {
   font-family: 'Lato', sans-serif;
   letter-spacing: 1px;
@@ -23,6 +22,7 @@ p {
   background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%);
   color:white;
 }
+
 .logo {
   width:50px;
   fill:white;
@@ -90,7 +90,8 @@ p {
     transform: translate3d(85px,0,0);
   }
 }
-/*Shrinking for mobile*/
+
+/*Pantallas pequeñas*/
 @media (max-width: 768px) {
   .waves {
     height:40px;
