--- a/src-frontend/src/app/layout/footer/footer.component.css
+++ b/src-frontend/src/app/layout/footer/footer.component.css
@@ -1,7 +1,56 @@
 footer {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 10px 0;
+  padding-top:50px;
+  padding-bottom:20px;
+  color:black;
+  background-color:white;
+  border-top: 1px solid black;
+}
+
+footer h3 {
+  margin-top:0;
+  margin-bottom:12px;
+  font-size:16px;
+}
+
+footer ul {
+  padding:0;
+  list-style:none;
+  line-height:1.6;
+  font-size:14px;
+  margin-bottom:0;
+}
+
+footer ul a {
+  color:inherit;
+  text-decoration:none;
+}
+
+footer ul a:hover {
+  opacity:0.8;
+}
+
+footer .item.text {
+  margin-bottom:36px;
+}
+
+@media (max-width:767px) {
+  .footer .item.text {
+    margin-bottom:0;
   }
-  
+}
+
+footer .item.text p {
+  opacity:0.6;
+  margin-bottom:0;
+}
+
+footer .item.social {
+  text-align:center;
+}
+
+footer .copyright {
+  text-align:center;
+  padding-top:24px;
+  font-size:13px;
+  margin-bottom:0;
+}
