--- a/src-frontend/src/app/user-dash/user-profile/user-profile.component.html
+++ b/src-frontend/src/app/user-dash/user-profile/user-profile.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container mt-5 espaciado">
     <h2>Perfil</h2>
     <form>
       <div class="form-group">
@@ -28,25 +28,17 @@
     </form>
   </div>
   
-  <div id="id01" class="modal">
-    <form class="modal-content">
-      <div class="contain">
-        <h1>Logrado</h1>
-        <div class="clearfix">
-          <button type="button" (click)="ocultarElemento('id01')" class="aceptar">Aceptar</button>
-        </div>
+  <div id="myModal1" class="modal" [ngClass]="{'show': isModalCerrar}">
+    <div class="modal-content">
+      <span class="close" (click)="closeModalCerrar()">&times;</span>
+      <div class="check-animation">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+          <circle cx="26" cy="26" r="25" fill="none" />
+          <path fill="none" stroke="#ffffff" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"
+            d="M14 27l5 5 14-14" class="check-svg" />
+        </svg>
       </div>
-    </form>
+      <p>Se ha realizado la acción satisfactorimente</p>
+      <button class="btnCerrar" (click)="closeModalCerrar()">Cerrar</button>
+    </div>
   </div>
-  
-  <script>
-    // Get the modal
-    var modal = document.getElementById('id01');
-  
-    // When the user clicks anywhere outside of the modal, close it
-    window.onclick = function (event) {
-      if (event.target == modal) {
-        modal.style.display = "none";
-      }
-    }
-  </script>
