--- a/src-frontend/src/app/user-dash/user-proyects/user-new-proyects/user-new-proyects.component.css
+++ b/src-frontend/src/app/user-dash/user-proyects/user-new-proyects/user-new-proyects.component.css
@@ -252,7 +252,7 @@
   }
   
   .add-card mat-icon {
-    color: #3f51b5; /* Color del ícono, puedes ajustarlo según tu diseño */
+    color: #3f51b5;
   }
   
   .add-card:hover mat-icon {
@@ -264,8 +264,8 @@
   }
 
   .agregar {
-    border-radius: 10px;
     transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out;
+    border-radius: 10px;
   }
 
   .notification {
@@ -286,7 +286,7 @@
   }
 
   .espaciado{
-    margin-bottom: 200px;
+    margin-bottom: 50px;
   }
   
   
