--- a/src-frontend/src/app/user-dash/user-proyects/user-mod-proyects/user-mod-proyects.component.css
+++ b/src-frontend/src/app/user-dash/user-proyects/user-mod-proyects/user-mod-proyects.component.css
@@ -1,4 +1,5 @@
-/* Estilos de botones */
+/* Estilos generales */
+
 .cancelbtn,
 .deletebtn {
   float: left;
@@ -14,13 +15,11 @@
   background-color: #f44336;
 }
 
-/* Estilos de contenedor */
 .contain {
   padding: 16px;
   text-align: center;
 }
 
-/* Estilos de modal */
 .modal {
   display: none;
   position: fixed;
@@ -65,7 +64,6 @@
   text-decoration: none;
 }
 
-/* Estilos de botones */
 .buttons {
   margin-top: 20px;
   display: flex;
@@ -109,7 +107,6 @@
   background-color: #c82333;
 }
 
-/* Estilos responsivos */
 @media screen and (max-width: 300px) {
   .cancelbtn,
   .deletebtn {
@@ -117,7 +114,6 @@
   }
 }
 
-/* Estilos de animación de verificación */
 .check-animation {
   margin-bottom: 30px;
   margin-top: 30px;
@@ -188,7 +184,6 @@
   color: #fff;
 }
 
-/* Estilos de close */
 .close {
   position: absolute;
   right: 35px;
@@ -203,19 +198,16 @@
   cursor: pointer;
 }
 
-/* Estilos de horizontal ruler */
 hr {
   border: 1px solid #f1f1f1;
   margin-bottom: 25px;
 }
 
-/* Estilos de botones volver */
 .back {
   display: flex;
   justify-content: flex-end;
 }
 
-/* Estilos de tarjeta */
 .mat-card {
   margin-bottom: 10px;
 }
@@ -290,12 +282,15 @@ hr {
   display: flex;
   justify-content: space-around;
   padding: 20px;
+  flex-wrap: wrap;
 }
 
 .example-container {
   background: #f9f9f9;
   border-radius: 10px;
   width: 30%;
+  min-width: 300px;
+  margin: 10px;
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -455,12 +450,13 @@ hr {
 .nueva-tarea-btn:hover {
   background-color: #0056b3;
 }
-.inicial{
+
+.inicial {
   margin-left: 50px;
   margin-right: 50px;
   margin-top: 30px;
 }
 
-.espaciado{
+.espaciado {
   margin-bottom: 50px;
 }
